Fix spacing for technologies in the tech section and projects, and deploy to Heroku.

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -618,7 +618,7 @@ textarea:focus {
     }
 
     #projects {
-        margin-top: 20%;
+        margin-top: 10%;
     }
 
     .project-card {
